--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Monster Girl Quest</title>
     <link rel="stylesheet" style="text/css" href="css/settings.css">
+    <script type="text/javascript" src="scripts/jquery-1.12.0.min.js"></script>
     <script type="text/javascript" src="scripts/js-vine.js"></script>
     <script type="text/javascript" src="scripts/mgq.js"></script>
   </head>
