--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
+<!DOCTYPE HTML>
+
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Monster Girl Quest</title>
+    <link rel="icon" href="img/ico/mgq.png" sizes="16x16 32x32 48x48 64x64"
+          type="image/vnd.microsoft.icon"/>
     <link rel="stylesheet" style="text/css" href="css/settings.css">
     <script type="text/javascript" src="scripts/jquery-1.12.0.min.js"></script>
     <script type="text/javascript" src="scripts/js-vine.js"></script>
