--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
   </head>
 
   <body onload="initNovel(800, 600);">
-    <div id="novelDiv">
-      <div class="bg">
-        <img id="background0" src="img/empty.png">
+    <div class="contain">
+      <div id="novelDiv">
+        <div class="bg">
+          <img id="background0" src="img/empty.png">
+        </div>
+        <div class="bg">
+          <img id="background1" src="img/empty.png">
+        </div>
+        <div id="dialogDiv"></div>
       </div>
-      <div class="bg">
-        <img id="background1" src="img/empty.png">
-      </div>
-      <div id="dialogDiv"></div>
     </div>
   </body>
 </html>
